--- a/css/intro.css
+++ b/css/intro.css
@@ -14,21 +14,57 @@ a {
   box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.16);
 }
 
+.bottom {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 2.4rem;
+}
+
 html {
   height: 100%;
+  overflow: hidden;
 }
 
 body {
+  height: 100%;
+  background-image: linear-gradient(to bottom, #1A5F2F, #00A1A2);
+  background-repeat: no-repeat;
   font-family: "Ubuntu", sans-serif;
+  margin: 0;
+  text-align: center;
 }
 
-header {
+.title_bar {
+  padding-top: 0.6rem;
+  padding-left: 0.6rem;
+  background-color: rgba(255, 255, 255, 0.75);
   display: flex;
   height: 131px;
   width: 100%;
 }
-header img {
+.title_bar img {
+  display: block;
   height: 90%;
+  position: relative;
+  bottom: 0;
+}
+
+h1 {
+  color: #1A5F2F;
+}
+
+header {
+  color: #ffffff;
+  padding-top: 1rem;
+}
+
+main {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+main p {
+  color: #ffffff;
 }
 
 /*# sourceMappingURL=intro.css.map */
