extra stijl toegevoegd voor knoppen die onderaan moeten staan

--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -12,3 +12,11 @@ a{
     border-radius: 25rem;
     box-shadow: 2px 4px 4px $button-shadow;
 }
+
+.bottom{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 2.4rem;
+    
+}
