--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,6 +1,8 @@
 //Kleuren
 $button-color: #D52A2A;
 $text-color: #ffffff;
+$title-green: #1A5F2F;
+$white-opacity: rgba(255, 255, 255, 0.75);
 $button-shadow: rgba(0, 0, 0, .16);
 $background: linear-gradient(to bottom, #1A5F2F, #00A1A2);
 
