extra kleur variabele toegevoegd

--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -5,7 +5,7 @@ $title-green: #1A5F2F;
 $white-opacity: rgba(255, 255, 255, 0.75);
 $button-shadow: rgba(0, 0, 0, .16);
 $background: linear-gradient(to bottom, #1A5F2F, #00A1A2);
-
+$background-vertical: linear-gradient(to right, #1A5F2F, #00A1A2);
 //fonts
 $ubuntu: 'Ubuntu',
 sans-serif;
