--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -17,9 +17,10 @@
 }
 
 .modal-content {
+    color: $title-green;
     background-color: #ffffff;
     width: auto;
-    height: 75%;
+    height: 100%;
     padding: 0;
     overflow: hidden;
     margin-top: 35px;
