--- a/css/intro.css
+++ b/css/intro.css
@@ -11,7 +11,8 @@ a {
   color: #ffffff;
   text-decoration: none;
   border-radius: 25rem;
-  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.16);
+  -webkit-box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.16);
+          box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.16);
 }
 
 .bottom {
@@ -21,6 +22,33 @@ a {
   bottom: 2.4rem;
 }
 
+@supports (-webkit-appearance: none) or (-moz-appearance: none) {
+  .touch-area .checker {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    padding: .8rem;
+    width: 195px;
+    background-image: -webkit-gradient(linear, left top, right top, from(#1A5F2F), to(#00A1A2));
+    background-image: linear-gradient(to right, #1A5F2F, #00A1A2);
+    border-radius: 25em;
+  }
+  .touch-area .checker p {
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 18px;
+  }
+  .touch-area .option {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+  }
+  .touch-area .option:checked ~ .checker {
+    border: 2.5px solid #D52A2A;
+    -webkit-box-shadow: inset 0 0 0px 2.5px #D52A2A;
+            box-shadow: inset 0 0 0px 2.5px #D52A2A;
+  }
+}
+
 html {
   height: 100%;
   overflow: hidden;
@@ -28,6 +56,7 @@ html {
 
 body {
   height: 100%;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#1A5F2F), to(#00A1A2));
   background-image: linear-gradient(to bottom, #1A5F2F, #00A1A2);
   background-repeat: no-repeat;
   font-family: "Ubuntu", sans-serif;
@@ -36,13 +65,16 @@ body {
 }
 
 .title_bar {
-  padding-top: 0.6rem;
-  padding-left: 0.6rem;
+  padding-top: .6rem;
+  padding-left: .6rem;
   background-color: rgba(255, 255, 255, 0.75);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   height: 131px;
   width: 100%;
 }
+
 .title_bar img {
   display: block;
   height: 90%;
@@ -63,8 +95,8 @@ main {
   padding-left: 2rem;
   padding-right: 2rem;
 }
+
 main p {
   color: #ffffff;
 }
-
 /*# sourceMappingURL=intro.css.map */
