header tekstkleur toegepast

--- a/sass/questions.sass
+++ b/sass/questions.sass
@@ -11,7 +11,8 @@ body
     height: 100%
     margin: 0
     text-align: center
-
+header
+    color: $title-green
 .image-holder
     img
         width: 100vw
