--- a/css/questions.css
+++ b/css/questions.css
@@ -78,7 +78,7 @@ header {
   left: 0;
   bottom: 35px;
   height: auto;
-  width: 100%;
+  width: 100vw;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -89,7 +89,7 @@ header {
 
 .close-button {
   float: right;
-  font-size: 1.75em;
+  font-size: 2em;
   font-weight: bold;
 }
 
@@ -110,7 +110,5 @@ header {
   height: auto;
   width: 100%;
   border: 0;
-  margin: 0 .3em;
-  cursor: pointer;
 }
 /*# sourceMappingURL=questions.css.map */
