--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -4,15 +4,14 @@
     left: 0;
     bottom: 35px;
     height: auto;
-    width: 100%;
-    // display: grid;
+    width: 100vw;
     align-items: center;
     justify-content: center;
 }
 
 .close-button {
     float: right;
-    font-size: 1.75em;
+    font-size: 2em;
     font-weight: bold;
 }
 
@@ -34,7 +33,5 @@
         height: auto;
         width: 100%;
         border: 0;
-        margin: 0 .3em;
-        cursor: pointer;
     }
 }
