--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -20,7 +20,9 @@ a {
     bottom: 2.4rem;
 
 }
-
+.Q-next{
+    margin-top: 29px;
+}
 // stijl voor de custom checkboxes
 
 @supports ((-webkit-appearance: none) or (-moz-appearance: none)) {
