--- a/sass/questions.sass
+++ b/sass/questions.sass
@@ -19,7 +19,12 @@ header
         max-height: 190px
         object-fit: cover
 
-
-
+.logo-bottom
+    img
+        width: 55.79px
+        height: 120.61px
+    position: absolute
+    right: 10px
+    bottom: 10px
 
 @import "modal"
