--- a/css/questions.css
+++ b/css/questions.css
@@ -11,8 +11,7 @@ a {
   color: #ffffff;
   text-decoration: none;
   border-radius: 25rem;
-  -webkit-box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.16);
-          box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.16);
+  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.16);
 }
 
 .bottom {
@@ -31,9 +30,8 @@ a {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    padding: .8rem;
+    padding: 0.8rem;
     width: 195px;
-    background-image: -webkit-gradient(linear, left top, right top, from(#1A5F2F), to(#00A1A2));
     background-image: linear-gradient(to right, #1A5F2F, #00A1A2);
     border-radius: 25em;
   }
@@ -48,11 +46,9 @@ a {
   }
   .touch-area .option:checked ~ .checker {
     border: 2.5px solid #D52A2A;
-    -webkit-box-shadow: inset 0 0 0px 2.5px #D52A2A;
-            box-shadow: inset 0 0 0px 2.5px #D52A2A;
+    box-shadow: inset 0 0 0px 2.5px #D52A2A;
   }
 }
-
 html {
   height: 100%;
   overflow: hidden;
@@ -69,11 +65,18 @@ header {
   color: #1A5F2F;
 }
 
+.image-holder .magnifier {
+  position: absolute;
+  float: right;
+  margin-top: -2em;
+  margin-right: 2em;
+  margin-left: 10em;
+  text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.5);
+}
 .image-holder img {
   width: 100vw;
   max-height: 190px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .logo-bottom {
@@ -81,7 +84,6 @@ header {
   right: 10px;
   bottom: 10px;
 }
-
 .logo-bottom img {
   width: 55.79px;
   height: 120.61px;
@@ -94,12 +96,8 @@ header {
   bottom: 35px;
   height: auto;
   width: 100vw;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .close-button {
@@ -120,10 +118,10 @@ header {
 }
 
 .modal-content img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: auto;
   width: 100%;
   border: 0;
 }
+
 /*# sourceMappingURL=questions.css.map */
