--- a/sass/questions.sass
+++ b/sass/questions.sass
@@ -14,6 +14,13 @@ body
 header
     color: $title-green
 .image-holder
+    .magnifier
+        position: absolute
+        float: right
+        margin-top: -2em
+        margin-right: 2em
+        margin-left: 10em
+        text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.5)
     img
         width: 100vw
         max-height: 190px
