grootte van afbeelding aangepast

--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -30,7 +30,7 @@
 .modal-content{
     img {
         object-fit: cover;
-        height: auto;
+        height: 45%;
         width: 100%;
         border: 0;
     }
