--- a/sass/home.sass
+++ b/sass/home.sass
@@ -13,13 +13,14 @@ body
     padding: 2rem
     margin: 0
 h1
+    margin-bottom: 5rem
     color: $text-color
 h2
     color: $text-color
 p
     color: $text-color
 .logo_container
-    margin-top: auto
+    margin-top: 2rem
     margin-bottom: auto
     margin-left: auto
     margin-right: auto
