--- a/sass/questions.sass
+++ b/sass/questions.sass
@@ -17,14 +17,15 @@ header
     .magnifier
         position: absolute
         float: right
-        margin-top: -6em
+        margin-top: -3.5rem
         margin-right: 2em
-        margin-left: 10em
+        margin-left: 9.5em
         text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.5)
     img
         width: 100vw
         max-height: 190px
         object-fit: cover
+        border-radius: 0 0 2rem 2rem
 
 .logo-bottom
     img
