--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -7,15 +7,19 @@
     width: 100vw;
     align-items: center;
     justify-content: center;
+    border-radius: 2rem;
+    border: 2px solid $title-green
 }
 
 .close-button {
+    margin-right: 1rem;
     float: right;
-    font-size: 2em;
+    font-size: 2.5em;
     font-weight: bold;
 }
 
 .modal-content {
+    border-radius: 2rem;
     color: $title-green;
     background-color: #ffffff;
     width: auto;
@@ -30,7 +34,7 @@
 .modal-content{
     img {
         object-fit: cover;
-        height: 45%;
+        height: 70%;
         width: 100%;
         border: 0;
     }
