extra stijl toegevoegd

--- a/sass/intro.sass
+++ b/sass/intro.sass
@@ -34,3 +34,15 @@ main
     padding-right: 2rem
     p
         color: $text-color
+.vlak
+    border-radius: 2rem
+    width: 95vw
+    margin: 2rem auto auto auto
+    background-color: rgba(255, 255, 255, 0.85)
+    padding-top: 3rem
+    padding-bottom: 3rem
+    h2
+        margin: 0
+    p, h2
+        color: $title-green
+        
