--- a/sass/save.sass
+++ b/sass/save.sass
@@ -24,11 +24,11 @@ body
         height: 90%
         position: relative
         bottom: 0
-h1
-    color: $title-green
-header
-    color: $text-color
-    padding-top: 1rem
+    h1
+        margin-left: 1rem
+        margin-top: 2.5rem
+        color: $title-green
+
 main
     padding-left: 2rem
     padding-right: 2rem
