--- a/css/save.css
+++ b/css/save.css
@@ -11,8 +11,7 @@ a {
   color: #ffffff;
   text-decoration: none;
   border-radius: 25rem;
-  -webkit-box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.16);
-          box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.16);
+  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.16);
 }
 
 .bottom {
@@ -20,6 +19,10 @@ a {
   left: 0;
   right: 0;
   bottom: 2.4rem;
+}
+
+.save {
+  margin-top: 4rem;
 }
 
 .Q-next {
@@ -31,9 +34,8 @@ a {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    padding: .8rem;
+    padding: 0.8rem;
     width: 195px;
-    background-image: -webkit-gradient(linear, left top, right top, from(#1A5F2F), to(#00A1A2));
     background-image: linear-gradient(to right, #1A5F2F, #00A1A2);
     border-radius: 25em;
   }
@@ -48,11 +50,9 @@ a {
   }
   .touch-area .option:checked ~ .checker {
     border: 2.5px solid #D52A2A;
-    -webkit-box-shadow: inset 0 0 0px 2.5px #D52A2A;
-            box-shadow: inset 0 0 0px 2.5px #D52A2A;
+    box-shadow: inset 0 0 0px 2.5px #D52A2A;
   }
 }
-
 html {
   height: 100%;
   overflow: hidden;
@@ -60,7 +60,6 @@ html {
 
 body {
   height: 100%;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#1A5F2F), to(#00A1A2));
   background-image: linear-gradient(to bottom, #1A5F2F, #00A1A2);
   background-repeat: no-repeat;
   font-family: "Ubuntu", sans-serif;
@@ -69,50 +68,41 @@ body {
 }
 
 .title_bar {
-  padding-top: .6rem;
-  padding-left: .6rem;
+  padding-top: 0.6rem;
+  padding-left: 0.6rem;
   background-color: rgba(255, 255, 255, 0.75);
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   height: 131px;
   width: 100%;
 }
-
 .title_bar img {
   display: block;
   height: 90%;
   position: relative;
   bottom: 0;
 }
-
-h1 {
+.title_bar h1 {
+  margin-left: 1rem;
+  margin-top: 2.5rem;
   color: #1A5F2F;
-}
-
-header {
-  color: #ffffff;
-  padding-top: 1rem;
 }
 
 main {
   padding-left: 2rem;
   padding-right: 2rem;
 }
-
 main p {
   color: #ffffff;
 }
-
-main input[type="text"] {
+main input[type=text] {
   margin-top: 91px;
   color: #1A5F2F;
   font-size: 20px;
   text-align: center;
   padding: 1rem;
-  -webkit-box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.16);
-          box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.16);
+  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.16);
   border: none;
   border-radius: 25em;
 }
+
 /*# sourceMappingURL=save.css.map */
